added hamburger, minor fixes to footer

--- a/src/index.html
+++ b/src/index.html
@@ -17,17 +17,19 @@
 <section class="hero">
      <!-- Main navigation -->
      <nav>
-        <div class="navbar">
-            <div class="nav-brand">
-                <img src="images/logo.jpg" alt="logo" width="50px" height="50px">
-            </div>
-            <div class="nav-items">
-                <ul>
-                    <li class="nav-links"><a href="#">Home</a></li>
-                    <li class="nav-links"><a href="#">Features</a></li>
-                    <li class="nav-links"><a href="#">Testimonials</a></li>
-                    <li class="nav-links contact-me"><a href="#">Get in touch</a></li>
-                </ul>
+        <div class="navbar-container">
+            <div class="logo"><img src="images/logo.jpg" alt="logo-image" width="50px" height="50px"></div>
+            <div class="menu-container">
+                <input type="checkbox" class="toggler" name="" id="">
+                <div class="hamburger"><div class="lines"></div></div>
+                <div class="menu">
+                    <ul class="menu-items">
+                        <li><a href="https://google.com">Home</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Testimonials</a></li>
+                        <li><a href="#">Get in Touch</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </nav>
@@ -189,14 +191,14 @@
     <div class="footer-container">
   
         <div class="product">
-            <div class="product-title">Product</div>
+            <div class="product-title">PRODUCT</div>
             <ul class="product-lists">
                <li><a href="#">Product tour</a></li>
                <li><a href="#">Pricing</a></li>
             </ul>
         </div>
         <div class="tools">
-            <div class="tools-title">Tools</div>
+            <div class="tools-title">TOOLS</div>
             <ul class="tools-lists">
                <li><a href="#">WolfFx Calculator</a></li>
                <li><a href="#">Strategy</a></li>
@@ -206,7 +208,7 @@
             </ul>
         </div>
         <div class="company">
-            <div class="company-title">Company</div>
+            <div class="company-title">COMPANY</div>
             <ul class="company-profile">
                <li><a href="#">About WolfFx</a></li>
                <li><a href="#">Careers</a></li>
@@ -215,7 +217,7 @@
             </ul>
         </div>
         <div class="socials">
-            <div class="socials-title">Socials</div>
+            <div class="socials-title">SOCIALS</div>
             
             <ul class="accounts">
                <li><a href="#">LinkedIn</a></li>
