completed layour responsiveness

--- a/src/index.html
+++ b/src/index.html
@@ -60,6 +60,7 @@
                     as such it is paramount you have one,Responsive websites are non-negotiable in he tech ecosytem,
                     as such it is paramount you have one,Responsive websites are non-negotiable in he tech ecosytem,as such it is paramount you have one</p>
             </div>
+        </div>
         <div class="feature-card">
             <div class="feature-image">
                 <i class="fa-solid fa-bullseye fa-2xl"></i>
@@ -70,9 +71,21 @@
                     as such it is paramount you have one,Responsive websites are non-negotiable in he tech ecosytem,
                     as such it is paramount you have one,Responsive websites are non-negotiable in he tech ecosytem,as such it is paramount you have one</p>
             </div>
+        </div>
         <div class="feature-card">
             <div class="feature-image">
                 <i class="fa-solid fa-naira-sign fa-2xl"></i>
+
+            </div>
+            <div class="feature-detail">
+                <p class="feature-descripton">Responsive websites are non-negotiable in he tech ecosytem,
+                    as such it is paramount you have one,Responsive websites are non-negotiable in he tech ecosytem,
+                    as such it is paramount you have oneResponsive websites are non-negotiable in he tech ecosytem,as such it is paramount you have one</p>
+            </div>
+        </div>
+        <div class="feature-card">
+            <div class="feature-image">
+                <i class="fa-solid fa-rocket fa-2xl"></i>
 
             </div>
             <div class="feature-detail">
@@ -101,7 +114,7 @@
             <p>Definitely, one of the best developers out there, the attention to details is immaculate, goal-driven, deadline consious, all the while delivering top notch products</p>
         </div>
     </div>
-    <div class="testimonial-card">
+    <div class="testimonial-card inverse">
         <div class="testimonial-image">
             <img src="images/victor.jpg" alt="testimonial-image">
 
